[package]
name = "svgtex"
version = "0.1.0"
authors = ["Alex Culliere <nachasic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
handlebars = "3.0.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"