[package]
name = "svgtex"
version = "0.1.0"
authors = ["Alex Culliere <nachasic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0" 
tempfile = "3.1.0"

[dependencies.tokio]
version = "0.2.21"
features = ["process"]